expose-app-connect.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demoapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connect-app-service
  namespace: demoapp
spec:
  selector:
    matchLabels:
      app: connect-app-service
  replicas: 3
  template:
    metadata:
      labels:
        app: connect-app-service
    spec:
      containers:
        - name: connect-app-service
          image: "tungktpm1/connect-app:app"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: connect-app-service
  namespace: demoapp
spec:
  type: NodePort
  selector:
    app: connect-app-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
    nodePort: 31111
