minio-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: minio-pvc
        # - name: "storage"
        #   hostPath:
        #     path: "/run/desktop/mnt/host/c/Users/hanv/Desktop/data"
      containers:
      - name: minio
        image: minio/minio:edge
        args:
        - server
        - --console-address
        - :9001
        - /data
        ports:
        - containerPort: 9000
        - containerPort: 9001
        volumeMounts:
        - name: storage
          mountPath: "/data"
---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: minio
spec:
  type: NodePort
  ports:
    - name: server-port
      port: 9000
      targetPort: 9000
      protocol: TCP
      nodePort: 31606
    - name: console-port
      port: 9001
      targetPort: 9001
      protocol: TCP
      nodePort: 31607
  selector:
    app: minio
